Обновлены зависимости и версия компилятора

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.5)
 
 project(poco-http-server)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 add_executable(poco-http-server
     src/handlers/Factory.cpp
@@ -11,7 +11,7 @@ add_executable(poco-http-server
     src/Server.cpp
 )
 
-find_package(Threads REQUIRED)
+find_package(Poco REQUIRED Foundation Util Net XML JSON)
 
 target_link_libraries(poco-http-server
     PocoUtil
